# CppMonad

./: CMakeLists.txt  README.md  main.cpp  monad.hpp
include/: continuation.hpp  expression.hpp  maybe.hpp  monad.hpp  monoid.hpp
src/: continuation.cpp  main.cpp  maybe.hpp  monoid.hpp
test/: test.cpp
